# ML-E-commerce-Success-Prediction

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
notebooks/: exploration.ipynb
scripts/: train_model.py
src/api/: __init__.py  main.py
src/config/: settings.py
src/data/: __init__.py  load_amazon.py
src/features/: __init__.py  build_features.py
src/models/: predict.py  train.py
src/utils/: helpers.py
tests/: test_data.py
